# InkPainting

./: CMakeLists.txt  InkPainting.cpp  InkPainting.h  README.md
include/: cxxopts.h
src/: lodepng.cpp
